--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
     <nav class="shadow-lg" >
         <div class="max-w-6xl mx-auto px-4 py-5 flex justify-between items-center">
             <div class="flex items-center ">
-                <img src="/test/NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
+                <img src="NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300 transition">Home</a>
@@ -90,91 +90,91 @@
                 <p class="mt-4" data-aos="fade-left">Explore our wide range of cleaning services tailored for your needs.</p>
                 <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
+                        <img src="Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
+                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
+                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
+                    </div>
+                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
                         <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold">Residential Cleaning</h3>
                         <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
                         <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
                     </div>
                     <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <img src="office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold">Residential Cleaning</h3>
                         <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
                         <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
                     </div>
                     <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/office2.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
-                        <h3 class="text-xl font-semibold">Residential Cleaning</h3>
-                        <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
-                        <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
-                    </div>
-                    <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105 relative data-aos="flip-left">
-                        <img src="/test/Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                        <img src="Movein-out.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                         <h3 class="text-xl font-semibold">Residential Cleaning</h3>
                         <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
                         <a href="booking.html" class="btn p-2 absolute bottom-1 right-1 rounded transition">Read More</a>
