--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <nav class="shadow-lg" >
         <div class="max-w-6xl mx-auto px-4 py-5 flex justify-between items-center">
             <div class="flex items-center ">
-                <img src="/test/NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
+                <img src="NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300 transition">Home</a>
@@ -92,7 +92,7 @@
 
     <section id="banner" class="text-white py-24 flex items-center justify-center" 
     data-aos="zoom-in" 
-    style="background-image: url(/test/Cleaningglass.jpg); background-size: cover; background-position: center; width: 100%; height: 80vh; min-height: 500px;">
+    style="background-image: url(Cleaningglass.jpg); background-size: cover; background-position: center; width: 100%; height: 80vh; min-height: 500px;">
         <div class="max-w-6xl mx-auto text-center">
             <h1 class="text-5xl font-bold">Welcome to Niholaa Cleaning Service</h1>
             <p class="mt-4 text-lg">Your trusted partner for a clean and fresh home</p>
@@ -108,17 +108,17 @@
             <p class="mt-4" data-aos="fade-left">Explore our wide range of cleaning services tailored for your needs.</p>
             <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105" data-aos="flip-left">
-                    <img src="/test/domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                    <img src="domestic.jpg" alt="Residential Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-semibold">Residential Cleaning</h3>
                     <p class="mt-2">Thorough cleaning for your home, making it sparkle and shine.</p>
                 </div>
                 <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105" data-aos="flip-left" data-aos-delay="100">
-                    <img src="/test/office2.jpg" alt="Office Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                    <img src="office2.jpg" alt="Office Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-semibold">Office Cleaning</h3>
                     <p class="mt-2">Professional cleaning services for your workplace to keep it productive.</p>
                 </div>
                 <div class="section-card shadow-lg rounded-lg p-6 transition transform hover:scale-105" data-aos="flip-left" data-aos-delay="200">
-                    <img src="/test/Movein-out.jpg" alt="Move In/Out Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
+                    <img src="Movein-out.jpg" alt="Move In/Out Cleaning" class="h-32 w-full object-cover rounded-lg mb-4">
                     <h3 class="text-xl font-semibold">Move In/Out Cleaning</h3>
                     <p class="mt-2">Comprehensive cleaning for your new or old home as you move.</p>
                 </div>
@@ -147,7 +147,7 @@
         </div>
     </section>
 
-    <section class="py-24" style="background-image: url(/test/017.jpg); background-size: cover; background-repeat: no-repeat;">
+    <section class="py-24" style="background-image: url(017.jpg); background-size: cover; background-repeat: no-repeat;">
         <div class="max-w-6xl mx-auto text-center">
             <h2 class="text-4xl font-bold" data-aos="fade-up">Ready to Experience a Cleaner Home?</h2>
             <p class="mt-4">Contact us today to schedule your cleaning service.</p>
