--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     <nav class="shadow-lg">
         <div class="max-w-6xl mx-auto px-4 py-5 flex justify-between items-center">
             <div class="flex items-center ">
-                <img src="/test/NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
+                <img src="NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300 transition">Home</a>
@@ -94,7 +94,7 @@
             <p class="mt-4 text-gray-300">For inquiries, feel free to reach out to us!</p>
         </div>
         <div class="max-w-6xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
-            <img src="/test/contact.jpg" alt="Customer Care" class="rounded-lg shadow-lg w-full floating">
+            <img src="contact.jpg" alt="Customer Care" class="rounded-lg shadow-lg w-full floating">
             <div>
                 <div class="text-center md:text-left">
                     <p class="text-gray-300">Email: <a href="mailto:info@niholaacleaning.com" class="text-[#D4AF37] hover:underline">info@niholaacleaning.com</a></p>
