--- a/careers.html
+++ b/careers.html
@@ -59,7 +59,7 @@
     <nav class="shadow-lg">
         <div class="max-w-6xl mx-auto px-4 py-5 flex justify-between items-center">
             <div class="flex items-center ">
-                <img src="/test/NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
+                <img src="NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300 transition">Home</a>
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="py-20 bg-cover bg-center text-center" style="background-image: url('/test/join.jpg');">
+    <section class="py-20 bg-cover bg-center text-center" style="background-image: url('join.jpg');">
         <div class="max-w-4xl mx-auto p-8 rounded-lg">
             <h2 class="text-4xl font-bold">Careers at Niholaa Cleaning Service</h2>
             <p class="mt-4 text-lg">Join our team and be a part of a growing company dedicated to quality cleaning services and customer satisfaction.</p>
@@ -103,12 +103,12 @@
             <h3 class="text-3xl font-semibold text-center" style="color:#D4AF37">Current Openings</h3>
             <div class="mt-10 grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="section-card shadow-lg rounded-lg p-6">
-                    <img src="/test/elevator.jpg" alt="Cleaner Job" class="h-32 w-full object-cover rounded-lg mb-4">
+                    <img src="elevator.jpg" alt="Cleaner Job" class="h-32 w-full object-cover rounded-lg mb-4">
                     <h4 class="text-xl font-semibold">Cleaner</h4>
                     <p class="mt-2">We are looking for dedicated cleaners to join our team. Experience preferred but not required.</p>
                 </div>
                 <div class="section-card shadow-lg rounded-lg p-6">
-                    <img src="/test/012.jpg" alt="Office Coordinator Job" class="h-32 w-full object-cover rounded-lg mb-4">
+                    <img src="012.jpg" alt="Office Coordinator Job" class="h-32 w-full object-cover rounded-lg mb-4">
                     <h4 class="text-xl font-semibold">Office Coordinator</h4>
                     <p class="mt-2">Organize and manage office operations. Strong organizational skills required.</p>
                 </div>
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section class="py-20 text-center" style="background-image: url('/test/joined.jpg'); background-position: center; background-size: cover;">
+    <section class="py-20 text-center" style="background-image: url('joined.jpg'); background-position: center; background-size: cover;">
         <div class="max-w-6xl mx-auto relative z-10">
             <h3 class="text-2xl font-semibold text-white">Why Work With Us?</h3>
             <p class="mt-4 text-white">At Niholaa, we value our employees and offer competitive wages, flexible schedules, and opportunities for growth.</p>
