--- a/booking.html
+++ b/booking.html
@@ -77,7 +77,7 @@
     <nav class="shadow-lg">
         <div class="max-w-6xl mx-auto px-4 py-5 flex justify-between items-center">
             <div class="flex items-center ">
-                <img src="/test/NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
+                <img src="NIHOLAA CLEANING SERVICE 11.png" alt="Niholaa Logo" class="w-32 h-auto">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300 transition">Home</a>
